dash-if-reference-player/src/app/components/setting/setting.component.css
/**
* No view encapsulation
*/
#set-accordionPanel {
  margin: 0;
  padding: 10px;
  overflow: hidden;
}

#set-accordionPanel:after {
  content: '';
  display: block;
  clear: both;
}

#set-accordionPanel ngx-masonry {
  transition: height 0.2s linear;
}

#set-accordionPanel .set-masonry-item {
  padding: 5px;
  transition: top 0.4s ease-in-out, left 0.4s ease-in-out;
}

#set-accordionPanel .set-masonry-item:hover {
  z-index: 999 !important;
}

#set-accordionPanel h2 {
  margin: auto 0 !important;
}

#set-accordionPanel h3 {
  margin: -10px 0 -20px !important;
}

#set-accordionPanel mat-accordion .mat-expansion-panel {
  border-radius: 0 !important;
}

#set-accordionPanel .mat-expansion-panel-body {
  margin-right: 2px;
  margin-bottom: 2px;
  max-height: 30rem;
  overflow-y: auto;
  scrollbar-color: #aaa transparent;
  scrollbar-width: thin;
}

#set-accordionPanel .mat-expansion-panel-body::-webkit-scrollbar {
  width: 6px;
}

#set-accordionPanel .mat-expansion-panel-body::-webkit-scrollbar-track {
  background: transparent;
}

#set-accordionPanel .mat-expansion-panel-body::-webkit-scrollbar-thumb {
  background: #aaa;
  border: 2px solid transparent;
  border-radius: 3px;
}

#set-accordionPanel .mat-expansion-panel-body::-webkit-scrollbar-thumb:hover {
  background: #888;
}

#set-accordionPanel .mat-checkbox {
  width: 100%;
  word-break: break-word !important;
  word-wrap: break-word !important;
}

#set-accordionPanel .mat-checkbox-inner-container {
  width: 13px !important;
  height: 13px !important;
}

#set-accordionPanel .mat-radio-container, #set-accordionPanel .mat-radio-outer-circle, #set-accordionPanel .mat-radio-inner-circle {
  width: 14px !important;
  height: 14px !important;
}
#set-accordionPanel .mat-radio-ripple .mat-ripple-element, #set-accordionPanel .mat-checkbox-ripple .mat-ripple-element {
  transform: scale(0.80) !important;
}

#set-accordionPanel .mat-form-field {
  width: 100%;
  margin: 4px 0 -6px;
  padding: 0;
}

#set-accordionPanel .mat-checkbox-layout .mat-checkbox-label {
  line-height: 1.3rem !important;
  position: relative;
  top: 1px;
}

#set-accordionPanel .singleSubSetting {
  margin: 5px 0px !important;
}

#set-accordionPanel .singleSubSetting hr {
  margin-bottom: unset !important
}

#set-accordionPanel .singleSubSetting label {
  display: flex;
  color: #707070;
}

#set-accordionPanel .singleSetting {
  padding: 4px !important;
  margin: 4px 0 !important;
  font-size: 80%;
  background-color: #f4f4f4;
  border-radius: 4px;
}

#set-accordionPanel .singleSetting label {
  margin-bottom: 2px !important;
}

#set-accordionPanel .set-content {
  width: 100%;
  background-color: white;
  -webkit-box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
}

#set-accordionPanel .set-radioButtonSettingGroup {
  display: flex;
  flex-direction: column;
}

#set-accordionPanel .set-info {
  margin-left: 4px;
  height: 8px;
  width: auto;
  vertical-align: text-top;
}

@media (min-width: 1440px) {
  #set-accordionPanel .singleSetting {
    font-size: 90%;
  }
}

